fixed letter-spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,7 +83,7 @@ a {
 
 .hero-title,
 .title {
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
 
 .hero-title {
@@ -187,7 +187,7 @@ a {
     font-size: 18px;
     margin: 15px 20px 10px 20px;
     line-height: 1.2;
-    letter-spacing: 2.3%;
+    letter-spacing: 0.03em;
   }
 
   p {
